--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,12 @@ td.selected {
 }
 
 p {
-    background-color: #fff;
+    background-color: blue;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     font-size: 50px;
-    margin: 0;
+    margin: 0 auto;
     height: 70px;
     width: 200px;
-}
+} 
