--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+
 h1 {
   font-family: sans-serif;
   color: blue;
@@ -25,4 +27,16 @@ p {
   height: 60px;
   width: 150px;
   box-shadow: 8px 8px 10px darkgray;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+.background-image {
+  background-image: url('./double-bubble-outline.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* width:  200px; */
+  height: 100vh;
 }
