--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 h1 {
   font-family: sans-serif;
   color: blue;
@@ -38,5 +36,6 @@ p {
   background-size: cover;
   background-repeat: no-repeat;
   /* width:  200px; */
+  /* viewport height- vh .. 1vh = 8px .. viewport width-vw .. 1vw = 6.6px */ 
   height: 100vh;
 }
